--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../img/favicon.png">
-    <title>DevFolio Bootstrap Portfolio Template - Index</title>
-    <base href="./Index.html">
+    <title>ToDO</title>
+    <base href="./index.html">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="./css/animation.css">
