--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="bg-body-secondary py-4 fw-semibold">
         <div class="container fs-3 text-dark text-center">
-            <span>TO<span class="text-danger">D<i class="fa-regular fa-check-circle fs-4"></i></span></span>
+            <span>TO<span class="text-danger">D<i class="fa-regular fa-check-circle fs-4"></i></span>
         </div>
     </header>
     <section class="min-vh-100 bg-light">
